# rp2040

./: .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  Makefile  README.md  main.cpp  makefile
.github/workflows/: build.yml
cmake/: toolchain-arm-gcc-cortex.cmake
cmake/debug-probes/: jlink.cmake  openocd.cmake  st-link.cmake
periph/: CMakeLists.txt
periph/examples/: gpio.example.cpp
periph/include/periph/: gpio.hpp
periph/src/: gpio.cpp
utilities/fatfs_diskio/: CMakeLists.txt  fatfs_diskio.cpp  fatfs_diskio.example.cpp  fatfs_diskio.hpp  fatfs_diskio_dataflash.cpp  fatfs_diskio_sd.cpp
utilities/freertos_wrappers/: CMakeLists.txt
utilities/syslog/: CMakeLists.txt  syslog.cpp  syslog.example.cpp  syslog.hpp
